[tool.poetry]
name = "gw-landscape"
version = "0.1.0"
description = ""
authors = ["jacopok <jacopok@gmail.com>"]
readme = "README.md"
packages = [{include = "gw_landscape"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gwfish = {git = "https://github.com/janosch314/GWFish"}
numpy = "^1.24.2"
matplotlib = "^3.6.3"
hasasia = "^1.2.3"
lalsuite = "^7.11"
matplotlib-label-lines = "^0.5.1"
ipython = "^8.13.2"
jplephem = "^2.18"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
